--- a/src/renderer/SimulatorDeviceRenderer.mxml
+++ b/src/renderer/SimulatorDeviceRenderer.mxml
@@ -19,7 +19,7 @@
 			import device.simulator.Simulator;
 			
 			public static const dropShadowFilterMiddle:DropShadowFilter = new DropShadowFilter(4.0, 45, 0x000000, 0.2, 8.0, 8.0, 0.9, BitmapFilterQuality.HIGH, false, false, false);
-			private static const greyFilter:ColorMatrixFilter = new ColorMatrixFilter();
+			private static const greyFilter:ColorMatrixFilter = new ColorMatrixFilter([0.3,0.59,0.11,0, 0,0.3,0.59,0.11,0,0,0.3,0.59,0.11,0,0,0,0,0,1,0]);
 			
 			protected function startStopButton_clickHandler(event:MouseEvent):void
 			{
