--- a/src/AtsMobileStation.mxml
+++ b/src/AtsMobileStation.mxml
@@ -105,7 +105,8 @@
 	</fx:Script>
 	
 	<s:Group id="clickConnected" buttonMode="true" height="26" left="5" right="5" top="5"
-			 click="clickConnected_clickHandler(event)" filters="{dropShadowFilter}">
+			 click="clickConnected_clickHandler(event)" filters="{dropShadowFilter}"
+			 rollOut="settingsButton.alpha=0.5" rollOver="settingsButton.alpha=1.0">
 		<s:Rect width="100%" height="100%" radiusX="3">
 			<s:fill>
 				<s:LinearGradient rotation="90">
@@ -120,8 +121,8 @@
 		<s:HGroup width="100%" paddingLeft="7" paddingRight="3" verticalCenter="0" verticalAlign="middle" gap="3">
 			<s:Label fontSize="13" text="Connected Devices" fontWeight="bold"/>
 			<s:Spacer width="100%"/>
-			<s:Group id="settingsButton" visible="false" buttonMode="true" click="settings_clickHandler(event)"
-					 toolTip="Xcode development settings" height="22" width="22">
+			<s:Group id="settingsButton" visible="false" alpha="0.5" buttonMode="true" click="settings_clickHandler(event)"
+					 toolTip="Apple developer settings" height="22" width="22">
 				<s:BitmapImage source="assets/icons/20/apple.png" smooth="true" smoothingQuality="high"/>
 			</s:Group>
 		</s:HGroup>
