less memory leak
update atsios project in assets

--- a/src/AtsMobileStation.mxml
+++ b/src/AtsMobileStation.mxml
@@ -102,6 +102,7 @@
 						tw.devices.push(dv);
 					}
 				}
+				dv.dispose();
 				
 				// open the TitleWindow as a modal popup window
 				PopUpManager.addPopUp(tw, this, true);
